5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1712_2508.log
== TEST (2019-05-13 22:21:23) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:21:33) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.158631
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:21:39) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:21:45) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:21:53) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:23:20) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:23:32) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3 + p
print(pi)
-- EXECUTION TIME:
0.183114
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:23:37) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:23:43) 
-- CODE:
from math import*
n = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while cont < x:
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:23:53) 
-- CODE:
from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:24:22) 
-- CODE:
from math import*
n = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < n:
	m = m*(-1)
	p = p + (1/((x + 1)*(x + 2)*(x + 3)))*4*m
	x = x + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:24:41) 
-- CODE:
from math import*
n = int(input(""))
cont = 1
p  = 0
x = 1
m = -1
while cont < n:
	m = m*(-1)
	p = p + (1/((x + 1)*(x + 2)*(x + 3)))*4*m
	x = x + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:24:48) 
-- CODE:
from math import*
n = int(input(""))
cont = 1
p  = 0
x = 1
m = -1
while cont < n:
	m = m*(-1)
	p = p + (1/((x + 1)*(x + 2)*(x + 3)))*4*m
	x = x + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.178328
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:24:52) 
-- CODE:
from math import*
n = int(input(""))
cont = 1
p  = 0
x = 1
m = -1
while cont < n:
	m = m*(-1)
	p = p + (1/((x + 1)*(x + 2)*(x + 3)))*4*m
	x = x + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.179232
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:38:05) 
-- CODE:
from math import*
n = int(input(""))
cont = 1
p  = 0
x = 1
m = -1
while cont < n:
	m = m*(-1)
	p = p + (1/((x + 1)*(x + 2)*(x + 3)))*4*m
	x = x + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:38:18) 
-- CODE:
from math import*
n = int(input(""))
cont = 1
p  = 0
x = 1
m = -1
while cont < n:
	m = m*(-1)
	p = p + (1/((x + 1)*(x + 2)*(x + 3)))*4*m
	x = x + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:18:09) 
-- CODE:
from math import*
n = int(input(""))
cont = 1
p  = 0
x = 1
m = -1
while cont < n:
	m = m*(-1)
	p = p + (1/((x + 1)*(x + 2)*(x + 3)))*4*m
	x = x + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:18:28) 
-- CODE:
from math import*
n = int(input(""))
cont = 1
p  = 0
x = 1
m = -1
while cont < n:
	m = m*(-1)
	p = p + (1/((x + 1)*(x + 2)*(x + 3)))*4*m
	x = x + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
-- EXECUTION TIME:
0.213345
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.1415563300000002
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:19:08) 
-- CODE:
from math import*
n = int(input(""))
cont = 1
p  = 0
x = 1
m = -1
while cont < n:
	m = m*(-1)
	p = p + (1/((x + 1)*(x + 2)*(x + 3)))*4*m
	x = x + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(round,(pi, 8))
-- OUTPUT:
<built-in function round> (3.13968254, 8)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:19:29) 
-- CODE:
from math import*
n = int(input(""))
cont = 1
p  = 0
x = 1
m = -1
while cont < n:
	m = m*(-1)
	p = p + (1/((x + 1)*(x + 2)*(x + 3)))*4*m
	x = x + 2
	cont = cont + 1
pi = 3.0 + p
print(round,(pi, 8))
-- OUTPUT:
<built-in function round> (3.1396825396825396, 8)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:19:55) 
-- CODE:
from math import*
n = int(input(""))
cont = 1
p  = 0
x = 1
m = -1
while cont < n:
	m = m*(-1)
	p = p + (1/((x + 1)*(x + 2)*(x + 3)))*4*m
	x = x + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(round(pi, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:20:02) 
-- CODE:
from math import*
n = int(input(""))
cont = 1
p  = 0
x = 1
m = -1
while cont < n:
	m = m*(-1)
	p = p + (1/((x + 1)*(x + 2)*(x + 3)))*4*m
	x = x + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(round(pi, 8))
-- EXECUTION TIME:
0.180819
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
